[package]
name = "workflow-terminal"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

#[target.'cfg(not(target_arch = "wasm32"))'.lib]
#crate-type = ["dylib"]

[dependencies]
cfg-if = "1.0.0"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# [dependencies]
js-sys = "0.3.56"
wasm-bindgen = "0.2.79"
regex = "1.5.5"
workflow-log = { path = "../workflow-log" }
workflow-wasm = { path = "../workflow-wasm" }
workflow-dom = { path = "../workflow-dom" }
thiserror = "1.0.32"
numtoa = "0.2.4"
wasm-bindgen-futures="*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
termion = "1.5.6"
async-std="1.12.0"


[dependencies.web-sys]
version = "0.3.56"
features = [
    'Window',
    'Document',
    'Element',
    'Url',
    'Blob',
    'CustomEvent',


    # 'console',
    # 'Document',
    # 'Element',
    # 'HtmlElement',
    # 'HtmlLinkElement',
    # 'HtmlImageElement',
    # 'HtmlInputElement',
    # 'HtmlHrElement',
    'Node',
    'NodeList',
    # 'Window',
    # 'InputEvent',
    # 'MouseEvent',
    # 'ErrorEvent',
    # 'KeyEvent',
    # 'CustomEvent',
    'HtmlCollection',
    # 'DomTokenList',
    # 'SvgPathElement',
    # 'SvgPoint',
    # 'DomRect',
    # 'TransitionEvent',
    # 'MutationObserver',
    # 'MutationObserverInit',
    # 'MutationRecord',


]
