[package]
name = "workflow-terminal"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/workflow-rs/workflow-terminal"
keywords = ["wasm","framework","browser","terminal","xterm","xtermjs","termion","cli"]
categories = ["category:command-line-interface"]
exclude = ["/.*", "/test"]
description = """
Terminal abstraction layer crate for creating native and in-browser terminal apps
"""

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
cfg-if = "1.0.0"
js-sys = "0.3.56"
wasm-bindgen = "0.2.79"
regex = "1.5.5"
workflow-log = { path = "../workflow-log" }
workflow-wasm = { path = "../workflow-wasm" }
workflow-dom = { path = "../workflow-dom" }
workflow-core = { path = "../workflow-core" }
thiserror = "1.0.32"
numtoa = "0.2.4"
wasm-bindgen-futures="*"
async-std = { version = "1.12.0"}
async-trait = "0.1.57"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
termion = "1.5.6"

[dependencies.web-sys]
version = "0.3.56"
features = [
    'Window',
    'Document',
    'Element',
    'Url',
    'Blob',
    'CustomEvent',
    'EventTarget',
    'KeyboardEvent',
    'Node',
    'NodeList',
    'HtmlCollection',
    'ResizeObserver',
]
